[tool.poetry]
name = "sidewinder"
version = "0.1.0"
description = "Physiological waveform processing"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
pandas = "^1.3.4"
numpy = "^1.21.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
ipykernel = "^6.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
