[tool.poetry]
name = "sidewinder"
version = "0.1.0"
description = "Physiological waveform processing"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
pandas = "^1.3.4"
numpy = "^1.21.4"
scipy = "^1.7.3"
matplotlib = "^3.5.1"
pyampd = "^0.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
ipykernel = "^6.6.0"
statsmodels = "^0.13.1"
mypy = "^0.971"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
