[tool.poetry]
name = "medical-waveforms"
version = "0.1.1"
description = "Preprocessing and analysis of physiological waveforms"
repository = "https://github.com/UCL-Chimera/medical-waveforms"
authors = [
    "Finneas Catling <f.catling@imperial.ac.uk>",
    "Sandip Varkey George <example@email.com>",
    "Manuel Teixeira Cabeleira <example@email.com>",
    "Jakob Mathiszig-Lee <example@email.com>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pandas = "^1.3.4"
numpy = "^1.22"
scipy = "^1.7.3"
matplotlib = "^3.5.1"
pyampd = "^0.0.1"
pydantic = "^1.9.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
ipykernel = "^6.6.0"
statsmodels = "^0.13.1"
mypy = "^0.971"
black = "^22.6.0"
pytest-cov = "^3.0.0"
pre-commit = "^2.20.0"
isort = "^5.10.1"

[tool.black]
line-length = 79

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
